# qazaq-ir

./: .gitignore  Cargo.toml  LICENSE  Modelfile  README.md  WHITEPAPER.md  llvm_output.ll  package-lock.json  package.json  release.sh  run_local_ai.sh  test_persistence.sh
.github/workflows/: docs-deploy.yml
crates/orda-node/: Cargo.toml
crates/orda-node/src/: execution_engine.rs  main.rs  mempool.rs  p2p.rs  state.rs
crates/qazaq-ir/examples/: 01_pqc_transaction.json  02_fatal_hallucination.json  llm_bridge_schema.json
crates/qazaq-ir/src/: lib.rs  llvm_codegen.rs  morpheme_registry.rs  orda_pqc.rs  semantic_router.rs
docs/: architecture.md  cli.md  core-engine.md  origin.md  pqc.md
docs/.vitepress/: config.js
docs/.vitepress/theme/: custom.css
orda_data/: db  snap.00000000000000B1
orda_data_3000/: db
src/: lib.rs  llm_bridge.rs  llvm_codegen.rs  main.rs  morpheme_registry.rs  orda_pqc.rs  qazaq_codegen.rs  qazaq_lexer.rs  semantic_router.rs
