[package]
name = "qazaq-ir"
version = "0.2.0"
edition = "2024"

[dependencies]
bitflags = "2.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
schemars = "0.8"

[[bin]]
name = "qazaqc"
path = "src/main.rs"
